exports[`Item should render 1`] = `
<div
  className="tc-list-item"
  id={undefined}
  onClick={undefined}
  onDoubleClick={undefined}
  role="button">
  <div
    className="tc-list-item-title">
    <span
      className={undefined}
      id={undefined}>
      Bar
    </span>
  </div>
  <div
    className="tc-list-item-definition-list">
    <div
      className="tc-list-item-definition-item">
      <div
        className="tc-list-item-definition-term">
        Author
      </div>
      <div
        className="tc-list-item-definition-description"
        title="Jean-Pierre DUPONT">
        Jean-Pierre DUPONT
      </div>
    </div>
    <div
      className="tc-list-item-definition-item">
      <div
        className="tc-list-item-definition-term">
        Created
      </div>
      <div
        className="tc-list-item-definition-description"
        title="2016-09-22">
        2016-09-22
      </div>
    </div>
    <div
      className="tc-list-item-definition-item">
      <div
        className="tc-list-item-definition-term">
        Modified
      </div>
      <div
        className="tc-list-item-definition-description"
        title="2016-09-22">
        2016-09-22
      </div>
    </div>
  </div>
</div>
`;

exports[`Item should render with actions 1`] = `
<div
  className="tc-list-item"
  id={undefined}
  onClick={undefined}
  onDoubleClick={undefined}
  role="button">
  <div
    className="tc-list-item-title">
    <span
      className={undefined}
      id={undefined}>
      Bar
    </span>
  </div>
  <div
    className="tc-actions btn-group">
    <button
      aria-describedby={42}
      className="btn btn-link"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      role="link"
      type="button">
      <i
        aria-hidden="true"
        className="fa fa-edit"
        title={null} />
    </button>
    <button
      aria-describedby={42}
      className="btn btn-link"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      role="link"
      type="button">
      <i
        aria-hidden="true"
        className="fa fa-trash-o"
        title={null} />
    </button>
  </div>
  <div
    className="tc-list-item-definition-list">
    <div
      className="tc-list-item-definition-item">
      <div
        className="tc-list-item-definition-term">
        Author
      </div>
      <div
        className="tc-list-item-definition-description"
        title="Jean-Pierre DUPONT">
        Jean-Pierre DUPONT
      </div>
    </div>
    <div
      className="tc-list-item-definition-item">
      <div
        className="tc-list-item-definition-term">
        Created
      </div>
      <div
        className="tc-list-item-definition-description"
        title="2016-09-22">
        2016-09-22
      </div>
    </div>
    <div
      className="tc-list-item-definition-item">
      <div
        className="tc-list-item-definition-term">
        Modified
      </div>
      <div
        className="tc-list-item-definition-description"
        title="2016-09-22">
        2016-09-22
      </div>
    </div>
  </div>
</div>
`;

exports[`Item should render with custom selected class 1`] = `
<div
  className="tc-list-item selectedClass"
  id={undefined}
  onClick={undefined}
  onDoubleClick={undefined}
  role="button">
  <div
    className="tc-list-item-title">
    <span
      className={undefined}
      id={undefined}>
      Bar
    </span>
  </div>
  <div
    className="tc-list-item-definition-list">
    <div
      className="tc-list-item-definition-item">
      <div
        className="tc-list-item-definition-term">
        Author
      </div>
      <div
        className="tc-list-item-definition-description"
        title="Jean-Pierre DUPONT">
        Jean-Pierre DUPONT
      </div>
    </div>
    <div
      className="tc-list-item-definition-item">
      <div
        className="tc-list-item-definition-term">
        Created
      </div>
      <div
        className="tc-list-item-definition-description"
        title="2016-09-22">
        2016-09-22
      </div>
    </div>
    <div
      className="tc-list-item-definition-item">
      <div
        className="tc-list-item-definition-term">
        Modified
      </div>
      <div
        className="tc-list-item-definition-description"
        title="2016-09-22">
        2016-09-22
      </div>
    </div>
  </div>
</div>
`;

exports[`Item should render with id if provided 1`] = `
<div
  className="tc-list-item"
  id="list-item"
  onClick={undefined}
  onDoubleClick={undefined}
  role="button">
  <div
    className="tc-list-item-title">
    <span
      className={undefined}
      id="list-item-title">
      Bar
    </span>
  </div>
  <div
    className="tc-list-item-definition-list">
    <div
      className="tc-list-item-definition-item">
      <div
        className="tc-list-item-definition-term">
        Author
      </div>
      <div
        className="tc-list-item-definition-description"
        title="Jean-Pierre DUPONT">
        Jean-Pierre DUPONT
      </div>
    </div>
    <div
      className="tc-list-item-definition-item">
      <div
        className="tc-list-item-definition-term">
        Created
      </div>
      <div
        className="tc-list-item-definition-description"
        title="2016-09-22">
        2016-09-22
      </div>
    </div>
    <div
      className="tc-list-item-definition-item">
      <div
        className="tc-list-item-definition-term">
        Modified
      </div>
      <div
        className="tc-list-item-definition-description"
        title="2016-09-22">
        2016-09-22
      </div>
    </div>
  </div>
</div>
`;

exports[`Item should render with item custom className 1`] = `
<div
  className="tc-list-item item-1-class"
  id={undefined}
  onClick={undefined}
  onDoubleClick={undefined}
  role="button">
  <div
    className="tc-list-item-title">
    <span
      className={undefined}
      id={undefined}>
      Bar
    </span>
  </div>
  <div
    className="tc-list-item-definition-list">
    <div
      className="tc-list-item-definition-item">
      <div
        className="tc-list-item-definition-term">
        Author
      </div>
      <div
        className="tc-list-item-definition-description"
        title="Jean-Pierre DUPONT">
        Jean-Pierre DUPONT
      </div>
    </div>
    <div
      className="tc-list-item-definition-item">
      <div
        className="tc-list-item-definition-term">
        Created
      </div>
      <div
        className="tc-list-item-definition-description"
        title="2016-09-22">
        2016-09-22
      </div>
    </div>
    <div
      className="tc-list-item-definition-item">
      <div
        className="tc-list-item-definition-term">
        Modified
      </div>
      <div
        className="tc-list-item-definition-description"
        title="2016-09-22">
        2016-09-22
      </div>
    </div>
  </div>
</div>
`;

exports[`Item should render with selected item 1`] = `
<div
  className="tc-list-item active"
  id={undefined}
  onClick={undefined}
  onDoubleClick={undefined}
  role="button">
  <div
    className="tc-list-item-title">
    <span
      className={undefined}
      id={undefined}>
      Bar
    </span>
  </div>
  <div
    className="tc-list-item-definition-list">
    <div
      className="tc-list-item-definition-item">
      <div
        className="tc-list-item-definition-term">
        Author
      </div>
      <div
        className="tc-list-item-definition-description"
        title="Jean-Pierre DUPONT">
        Jean-Pierre DUPONT
      </div>
    </div>
    <div
      className="tc-list-item-definition-item">
      <div
        className="tc-list-item-definition-term">
        Created
      </div>
      <div
        className="tc-list-item-definition-description"
        title="2016-09-22">
        2016-09-22
      </div>
    </div>
    <div
      className="tc-list-item-definition-item">
      <div
        className="tc-list-item-definition-term">
        Modified
      </div>
      <div
        className="tc-list-item-definition-description"
        title="2016-09-22">
        2016-09-22
      </div>
    </div>
  </div>
</div>
`;

exports[`Item should render with icon 1`] = `
<div
  className="tc-list-item"
  id={undefined}
  onClick={undefined}
  onDoubleClick={undefined}
  role="button">
  <div
    className="tc-list-item-icon">
    <i
      aria-hidden="true"
      className="fa fa-file-excel-o"
      title={null} />
  </div>
  <div
    className="tc-list-item-title">
    <span
      className={undefined}
      id={undefined}>
      Bar
    </span>
  </div>
  <div
    className="tc-list-item-definition-list">
    <div
      className="tc-list-item-definition-item">
      <div
        className="tc-list-item-definition-term">
        Author
      </div>
      <div
        className="tc-list-item-definition-description"
        title="Jean-Pierre DUPONT">
        Jean-Pierre DUPONT
      </div>
    </div>
    <div
      className="tc-list-item-definition-item">
      <div
        className="tc-list-item-definition-term">
        Created
      </div>
      <div
        className="tc-list-item-definition-description"
        title="2016-09-22">
        2016-09-22
      </div>
    </div>
    <div
      className="tc-list-item-definition-item">
      <div
        className="tc-list-item-definition-term">
        Modified
      </div>
      <div
        className="tc-list-item-definition-description"
        title="2016-09-22">
        2016-09-22
      </div>
    </div>
  </div>
</div>
`;
